# yamaha-x3423

./: README.md  control.py
case/front_laser/: front_panel.FCStd  front_panel.FCStd1
firmware/: Cargo.toml  Makefile  make_sysex.py  memory.x
firmware/src/: fader.rs  main.rs  sysex_buffer.rs  x3423.rs
pcb/lib/: bluepill.lib
pcb/lib/footprints.pretty/: DD39AJPA.kicad_mod  Molex_52044_3445.kicad_mod
pcb/pcb/: pcb-cache.lib  pcb.kicad_pcb  pcb.pro  pcb.sch  sym-lib-table
