[package]
name = "yamahax3423"
version = "0.1.0"
authors = ["Florian Jung <flo@windfis.ch>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
cortex-m = "0.6.7"
cortex-m-rt = ">=0.6"
cortex-m-rtic = ">=0.5"
stm32f1xx-hal = { features = ["rt", "stm32f103", "stm32-usbd", "medium"] }

# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
